# rtdetr-tensorrt-cpp-pipeline

./: .gitignore  README.md  requirements.txt
inference_cpp/: CMakeLists.txt  main.cpp  rtdetr.hpp
notebook/: rtgetr.ipynb
results/: inference_log.txt
tensorrt/: build_engine.py
